[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lindash_levkany"
version = "0.0.1"
authors = [
  { name="Lev Kany", email="levkany.dev@gmail.com" },
]
description = "Linux cli tool for servers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix/Linux",
]

[project.urls]
Homepage = "https://github.com/levkany/lindash"
Issues = "https://github.com/levkany/lindash/issues"